Updated nav and search

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -40,25 +40,28 @@
             <li><a href="/recipes?recipe=Sesame%20Chicken&category=Asian">Sesame Chicken</a></li>
             <li><a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a></li>
             <li><a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a></li>
-            <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Strawberry Pancakes</a></li>
+            <li><a href="/recipes?recipe=Anadama%20Bread&category=Bread">Anadama Bread</a></li>
+            <li><a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a></li>
             <li><a href="/recipes?recipe=Oven%20Pancakes&category=Breakfast">Oven Pancakes</a></li>
+            <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Strawberry Pancakes</a></li>
             <li><a href="/recipes?recipe=Spicy%20Pear%20Pancakes&category=Breakfast">Spicy Pear Pancakes</a></li>
+            <li><a href="/recipes?recipe=Apple%20Pancakes&category=Breakfast">Apple Pancakes</a></li>
             <li><a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a></li>
             <li><a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Buttermilk Waffles</a></li>
             <li><a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a></li>
             <li><a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a></li>
             <li><a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a></li>
             <li><a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a></li>
-            <li><a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a></li>
-            <li><a href="/recipes?recipe=Anadama%20Bread&category=Bread">Anadama Bread</a></li>
-            <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a></li>
+            <li><a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a></li>
             <li><a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a></li>
+            <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a></li>
             <li><a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a></li>
             <li><a href="/recipes?recipe=Pizza&category=Italian">Pizza</a></li>
             <li><a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a></li>
             <li><a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a></li>
-            <li><a href="/recipes?recipe=Roasted%20Cauliflower&category=Mediterranean">Roasted Cauliflower</a></li>
-            <li><a href="/recipes?recipe=Tacos%20with%20Guacamole&category=Mexican">Tacos with Guacamole</a></li>
+            <li><a href="/recipes?recipe=Guacamole&category=Mexican">Guacamole</a></li>
+            <li><a href="/recipes?recipe=Green%20Chili&category=Mexican">Green Chili</a></li>
+            <li><a href="/recipes?recipe=Meat%20Crumbles&category=Mexican">Meat Crumbles</a></li>
             <li><a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Grilled Salmon</a></li>
             <li><a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Chile Lime Shrimp</a></li>
             <li><a href="/recipes?recipe=Poke%20Bowl&category=Seafood">Poke Bowl</a></li>
@@ -66,6 +69,7 @@
             <li><a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a></li>
             <li><a href="/recipes?recipe=Thai%20Soyaki%20Salmon&category=Seafood">Thai Soyaki Salmon</a></li>
             <li><a href="/recipes?recipe=Ginger%20Carrots&category=Vegetables">Ginger Carrots</a></li>
+            <li><a href="/recipes?recipe=Roasted%20Cauliflower&category=Mediterranean">Roasted Cauliflower</a></li>
             <li><a href="/recipes?recipe=Spicy%20Cilantro%20Carrots&category=Vegetables">Spicy Cilantro Carrots</a></li>
             <li><a href="/recipes?recipe=Sesame%20Green%20Beans&category=Vegetables">Sesame Green Beans</a></li>
             <li><a href="/recipes?recipe=Sauteed%20Spinach&category=Vegetables">Sauteed Spinach</a></li>
