--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -52,6 +52,7 @@
           <a href="/recipes?recipe=Oven%20Pancakes&category=Breakfast">Oven Pancakes</a><br>
           <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Strawberry Pancakes</a><br>
           <a href="/recipes?recipe=Spicy%20Pear%20Pancakes&category=Breakfast">Spicy Pear Pancakes</a><br>
+          <a href="/recipes?recipe=Apple%20Pancakes&category=Breakfast">Apple Pancakes</a><br>
           <a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a><br>
           <a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Buttermilk Waffles</a><br>
           <a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a><br>
@@ -61,8 +62,9 @@
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
-          <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a><br>
-          <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a>
+          <a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a><br>
+          <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a><br>
+          <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a>
         </div>
         <button class="accordion">Italian</button>
         <div class="panel">
@@ -76,7 +78,9 @@
         </div>
         <button class="accordion">Mexican</button>
         <div class="panel">
-          <a href="/recipes?recipe=Tacos%20with%20Guacamole&category=Mexican">Tacos with Guacamole</a><br>
+          <a href="/recipes?recipe=Guacamole&category=Mexican">Guacamole</a><br>
+          <a href="/recipes?recipe=Green%20Chili&category=Mexican">Green Chili</a><br>
+          <a href="/recipes?recipe=Meat%20Crumbles&category=Mexican">Meat Crumbles</a>
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
