Added Meditteranean Chicken

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row">
         <div class="col-sm-7">
-          <div class="f-b">Copyright &copy; 2017 Alan Frost. All Rights Reserved.</div>
+          <div class="f-b">&copy; 2017 Alan Frost. All Rights Reserved.</div>
         </div>
         <div class="col-sm-5">
           <div class="footer-widget-social">
