--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -75,6 +75,7 @@
         <div class="panel">
           <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
+          <a href="/recipes?recipe=Mediterranean%20Chicken&category=Mediterranean">Mediterranean Chicken</a><br>
         </div>
         <button class="accordion">Mexican</button>
         <div class="panel">
