Clean up meta tags

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-  <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
-  <meta http-equiv="content-style-type" content="text/css"/>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="apple-itunes-app" content="app-id=761389261, affiliate-data=, app-argument=">
-  <meta property="twitter:account_id" content="4503599627902758" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="content-style-type" content="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Frosty Web</title>
     <!-- meta -->
-    <meta property="og:url" content="https://cyberfrosty.com">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Frosty Web">
-    <meta property="og:title" content="Frosty Web">
-    <meta property="og:description" content="Frost family recipes and shared content">
-    <meta property="og:image" content="static/img/logo.png">
-    <meta property="twitter:site:id" content="13334762">
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Frosty Web">
-    <meta property="twitter:description" content="Frost family recipes and shared content">
-    <meta property="twitter:image:src" content="static/img/logo.png">
-    <meta name="description" content="Frost family recipes and shared content">
-    <meta name="author" content="Alan Frost">
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cyberfrosty.com" />
+    <meta property="og:site_name" content="Frosty Web" />
+    <meta property="og:title" content="Frosty Web" />
+    <meta property="og:description" content="Frost family recipes and shared content" />
+    <meta property="og:image" content="static/img/logo.png" />
+    <meta property="twitter:site:id" content="13334762" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Frosty Web" />
+    <meta property="twitter:description" content="Frost family recipes and shared content" />
+    <meta property="twitter:image:src" content="static/img/logo.png" />
+    <meta name="description" content="Frost family recipes and shared content" />
+    <meta name="author" content="Alan Frost" />
     <link rel="shortcut icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
     <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
