--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -53,6 +53,7 @@
             <li><a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a></li>
             <li><a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a></li>
             <li><a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a></li>
+            <li><a href="/recipes?recipe=Pfeffernusse&category=Dessert">Pfeffernusse</a></li>
             <li><a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a></li>
             <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a></li>
             <li><a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a></li>
