Confirm token, vault update, pylint

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   </div>
   <div class="row">
     <div class="col-md-4">
-      <p>Take a look at the recipes page for delicious selection of healthy choices</p>
+      <p>Frosty Web has a public collection of delicious and healthy recipes. It also provides secure functionality for storing private content and exchanging messages. Membership requires an invite from an existing member.</p>
     </div>
     <div class="col-md-8">
       <img  src="{{url_for("static", filename="img/GlacierLake.jpg")}} alt="Glacier Lake"
