--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -8,28 +8,17 @@
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.username(placeholder="username") }}
-    <span class="error">
-      {% if form.username.errors %}
-        {% for error in form.username.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
+  {{ form.username(id="username", placeholder="Username or email") }}
   </p>
   <p>
-  <i class="fa fa-qrcode fa-fw"></i>
-  {{ form.token(placeholder="token") }}
-    <span class="error">
-      {% if form.token.errors %}
-        {% for error in form.token.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
+  <i class="fa fa-key fa-fw"></i>
+  {{ form.password(id="password", placeholder="Password") }}
+  </p>
+  <p>
+  <i class="fa fa-ticket fa-fw"></i>
+  {{ form.token(id="token", placeholder="Token") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Confirm</button>
-  <br /><br />
 </form>
 </div>
 
