--- a/templates/login.html
+++ b/templates/login.html
@@ -2,18 +2,20 @@
 
 {% block content %}
 
+<script src="{{url_for('static', filename='js/login.js')}}" type="text/javascript"></script>
+
 <div class="container">
 <form id="login_form" class="form-signin" role="form" method="POST" action="">
   <center>
   <h3 class="form-signin-heading">Log In</h3>
   {{ form.csrf_token }}
   <p>
-  <i class="fa fa-envelope-o fa-fw"></i>
+  <i class="fa fa-user fa-fw"></i>
   {{ form.username(id="username", placeholder="Username or email") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="password", title="Password must contain at least 6 characters, including UPPER/lowercase and numbers.", placeholder="New password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}") }}
+  {{ form.password(id="password", title="Password must contain at least 8 characters, including UPPER/lowercase and numbers.", placeholder="Password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}") }}
   </p>
   <p>
   <div class="checkbox">
