--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -91,7 +91,8 @@
           <a href="/recipes?recipe=Poke%20Bowl&category=Seafood">Poke Bowl</a><br>
           <a href="/recipes?recipe=Salmon%20Patties&category=Seafood">Salmon Patties</a><br>
           <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a><br>
-          <a href="/recipes?recipe=Thai%20Soyaki%20Salmon&category=Seafood">Thai Soyaki Salmon</a>
+          <a href="/recipes?recipe=Thai%20Soyaki%20Salmon&category=Seafood">Thai Soyaki Salmon</a><br>
+          <a href="/recipes?recipe=Tuna%20Noodle&category=Seafood">Tuna Noodle</a>
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
