--- a/templates/vault.html
+++ b/templates/vault.html
@@ -8,6 +8,7 @@
   <div class="page-header">
     <h3>Vault</h3>
   </div>
+
   <!-- Modal -->
   <div id="viewVault" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -27,6 +28,12 @@
   </div>
 
   <div class="row">
+    {% if mcf %}
+      {{ mcf | safe }}
+    {% endif %}
+    {% if contents %}
+      {{ contents | safe }}
+    {% else %}
     <div class="col-sm-10">
       <div class="row">
         <div class="col-sm-1">
@@ -47,7 +54,9 @@
         </ol>
       </div><!--/siderbar-module-inset-->
     </div><!--/col-sm-3-->
+    {% endif %}
   </div><!--/row-->
+  <input type=hidden value="{{ mcf or '' }}" name=mcf>
 </div><!--/container-->
 
 
