Shawarma, latest recipe

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,12 +13,12 @@
     <meta property="og:site_name" content="Frosty Web" />
     <meta property="og:title" content="Frosty Web" />
     <meta property="og:description" content="Frost family recipes and shared content" />
-    <meta property="og:image" content="static/img/logo.png" />
+    <meta property="og:image" content="static/img/kirigami-snowflake.jpg" />
     <meta property="twitter:site:id" content="13334762" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Frosty Web" />
     <meta property="twitter:description" content="Frost family recipes and shared content" />
-    <meta property="twitter:image:src" content="static/img/logo.png" />
+    <meta property="twitter:image:src" content="static/img/kirigami-snowflake.jpg" />
     <meta name="description" content="Frost family recipes and shared content" />
     <meta name="author" content="Alan Frost" />
     <link rel="shortcut icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
