Move images to snowyrangesolutions cdn

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
       <p>Frosty Web has a public collection of delicious and healthy recipes. It also provides secure functionality for storing private content and exchanging messages. Membership requires an invite from an existing member.</p>
     </div>
     <div class="col-md-8">
-      <img  src="{{url_for("static", filename="img/GlacierLake.jpg")}} alt="Glacier Lake"
-        srcset="{{url_for("static", filename="img/GlacierLake.jpg")}} 1120w,
-                {{url_for("static", filename="img/GlacierLake-medium.jpg")}} 720w,
-                {{url_for("static", filename="img/GlacierLake-small.jpg")}} 400w"
+      <img  src="https://snowyrangesolutions.com/static/img/GlacierLake.jpg" alt="Glacier Lake"
+        srcset="https://snowyrangesolutions.com/static/img/GlacierLake.jpg 1120w,
+                https://snowyrangesolutions.com/static/img/GlacierLake-medium.jpg 720w,
+                https://snowyrangesolutions.com/static/img/GlacierLake-small.jpg 400w"
         sizes="(min-width: 40em) calc(66.6vw - 4em) 100vw"> 
     </div>
   </div>
