--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -62,8 +62,10 @@
         </div>
         <button class="accordion">Mediterranean</button>
         <div class="panel">
+          <a href="/recipes?recipe=Chicken%20Shawarma&category=Mediterranean">Chicken Shawarma</a><br>
           <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
+          <a href="/recipes?recipe=Red%20Pepper%20Hummus&category=Mediterranean">Red Pepper Hummus</a><br>
           <a href="/recipes?recipe=Mediterranean%20Chicken&category=Mediterranean">Mediterranean Chicken</a><br>
         </div>
         <button class="accordion">Mexican</button>
