Pie shell, search and nav updates

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -50,11 +50,14 @@
             <li><a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a></li>
             <li><a href="/recipes?recipe=Pfeffernusse&category=Dessert">Pfeffernusse</a></li>
             <li><a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a></li>
+            <li><a href="/recipes?recipe=Pumpkin%20Pie&category=Dessert">Pumpkin Pie</a></li>
             <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a></li>
             <li><a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a></li>
             <li><a href="/recipes?recipe=Pizza&category=Italian">Pizza</a></li>
+            <li><a href="/recipes?recipe=Chicken%20Shawarma&category=Mediterranean">Chicken Shawarma</a></li>
             <li><a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a></li>
             <li><a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a></li>
+            <li><a href="/recipes?recipe=Red%20Pepper%20Hummus&category=Mediterranean">Red Pepper Hummus</a></li>
             <li><a href="/recipes?recipe=Guacamole&category=Mexican">Guacamole</a></li>
             <li><a href="/recipes?recipe=Green%20Chili&category=Mexican">Green Chili</a></li>
             <li><a href="/recipes?recipe=Meat%20Crumbles&category=Mexican">Meat Crumbles</a></li>
