--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -53,6 +53,7 @@
           <a href="/recipes?recipe=Chocolate%20Crunchies&category=Dessert">Chocolate Crunchies</a><br>
           <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a><br>
           <a href="/recipes?recipe=Pfeffernusse&category=Dessert">Pfeffernusse</a><br>
+          <a href="/recipes?recipe=Pumpkin%20Pie&category=Dessert">Pumpkin Pie</a><br>
           <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Swedish Pancakes</a>
         </div>
         <button class="accordion">Italian</button>
