--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -4,8 +4,20 @@
 
 <div class="container">
 <form class="form-confirm" role="form" method="post" action="">
+  <center>
   <h3 class="form-signin-heading">Confirm</h3>
   {{ form.csrf_token }}
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <font color="red">
+      <ul class="fa-ul">
+      {% for message in messages %}
+        <li><i class="fa fa-exclamation-triangle fa-li fa-lg"></i>{{ message }}</li>
+      {% endfor %}
+      </ul>
+      </font>
+    {% endif %}
+  {% endwith %}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
   {{ form.username(id="username", placeholder="Username or email") }}
@@ -19,6 +31,7 @@
   {{ form.token(id="token", placeholder="Token") }}
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Confirm</button>
+  </center>
 </form>
 </div>
 
