--- a/templates/resend.html
+++ b/templates/resend.html
@@ -2,24 +2,33 @@
 
 {% block content %}
 
-<div class="container-fluid">
-<div class="col-lg-8 col-md-8 col-sm-8">
+<div class="container">
 <form class="form-signin" role="form" method="post" action="">
+  <center>
   <h3 class="form-signin-heading">Resend Confirmation Code</h3>
   {{ form.csrf_token }}
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <font color="red">
+      <ul class="fa-ul">
+      {% for message in messages %}
+        <li><i class="fa fa-exclamation-triangle fa-li fa-lg"></i>{{ message }}</li>
+      {% endfor %}
+      </ul>
+      </font>
+    {% endif %}
+  {% endwith %}
   <p>
-  {{ form.email(placeholder="email") }}
-    <span class="error">
-      {% if form.email.errors %}
-        {% for error in form.email.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
+  <i class="fa fa-envelope-o fa-fw"></i>
+  {{ form.email(id="email", placeholder="Email addess") }}
+  </p>
+  <p>
+  <i class="fa fa-phone fa-fw"></i>
+  {{ form.phone(id="phone", placeholder="Phone") }}
   </p>
   <p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-send-o" aria-hidden="true"></i>&nbsp;&nbsp;Resend Confirmation Code</button>
+  </center>
 </form>
-</div>
 </div>
 {% endblock %}
