--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -96,19 +96,19 @@
     </div>
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="nav navbar-nav">
-        <li><a class="nav-item nav-link" href="{{url_for('recipes')}}"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Recipes</a></li>
-        <li><a class="nav-item nav-link" href="{{url_for('messages')}}"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;Messages</a></li>
-        <li><a class="nav-item nav-link" href="{{url_for('vault')}}"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Vault</a></li>
-        <li><a class="nav-item nav-link" data-toggle="modal" href="#search"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;Search</a></li>
+        <li><a class="nav-item nav-link" href="{{url_for('recipes')}}"><i class="fa fa-cutlery fa-fw" aria-hidden="true"></i>&nbsp;Recipes</a></li>
+        <li><a class="nav-item nav-link" href="{{url_for('messages')}}"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i>&nbsp;Messages</a></li>
+        <li><a class="nav-item nav-link" href="{{url_for('vault')}}"><i class="fa fa-lock fa-fw" aria-hidden="true"></i>&nbsp;Vault</a></li>
+        <li><a class="nav-item nav-link" data-toggle="modal" href="#search"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp;Search</a></li>
       </ul>
         
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
           <li><a class="nav-item nav-link" href="{{ url_for('profile') }}">{{ current_user.get_username() }}</a></li>
-          <li><a class="nav-item nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a></li>
+          <li><a class="nav-item nav-link" href="{{ url_for('logout') }}"><i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>&nbsp;Logout</a></li>
         {% else %}
-          <li><a class="nav-item nav-link" href="{{url_for('register')}}"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;Sign Up</a></li>
-          <li><a class="nav-item nav-link" href="{{url_for('login')}}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li>
+          <li><a class="nav-item nav-link" href="{{url_for('register')}}"><i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp;Sign Up</a></li>
+          <li><a class="nav-item nav-link" href="{{url_for('login')}}"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>&nbsp;Login</a></li>
         {% endif %}
       </ul>
     </div>
