--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-<form id="change_form" class="form-signin" role="form" method="post" action="">
+<form id="change_form" class="form-signin" role="form" method="post" action="" enctype=multipart/form-data>
   <center>
   <h3 class="form-signin-heading">Upload Image</h3>
   {{ form.csrf_token }}
@@ -20,7 +20,7 @@
   {% endwith %}
   <p>
   <i class="fa fa-file-image-o fa-fw"></i>
-  {{ form.filename(id="filename", placeholder="Filename") }}
+  {{ form.file(id="file", placeholder="Filename") }}
   </p>
   <p>
   <i class="fa fa-pencil fa-fw"></i>
@@ -32,7 +32,7 @@
   </p>
   <p>
   <i class="fa fa-calendar fa-fw"></i>
-  {{ form.date_created(id="date_created", type="date", placeholder="Date") }}
+  {{ form.created(id="created", type="date", placeholder="Date") }}
   </p>
   <p>
   <i class="fa fa-arrows fa-fw"></i>
