Update copyright and add github

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,12 +52,13 @@
       <div class="container">
         <div class="row">
         <div class="col-sm-7">
-          <div class="f-b">&copy; 2017 Alan Frost. All Rights Reserved.</div>
+          <div class="f-b">&copy; 2017-2018 Alan Frost. All Rights Reserved.</div>
         </div>
         <div class="col-sm-5">
           <div class="footer-widget-social">
             &nbsp;<a data-toggle="tooltip" title="Back to top" href="#top"><i class="fa fa-chevron-up fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Facebook" href="https://facebook.com"><i class="fa fa-facebook-square fa-lg"></i></a>
+            &nbsp;<a data-toggle="tooltip" title="Github" href="https://github.com/cyberfrosty"><i class="fa fa-github-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Instagram" href="https://instagram.com"><i class="fa fa-instagram fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Linkedin" href="https://www.linkedin.com/alan"><i class="fa fa-linkedin-square fa-lg"></i></a>
             &nbsp;<a data-toggle="tooltip" title="Pinterest" href="https://pinterest.com/frostyalan"><i class="fa fa-pinterest-square fa-lg"></i></a>
